src/objects/CEC_Retrieval_Request__c.object
<CustomObject>
    <description>CEC Retrieval Request  will hold information about  new Retrieval Request.</description>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <description>CEC Appointment Date to capture the appointment date from the downstream system.</description>
        <label>Appointment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Best_Visiting_Hour__c</fullName>
        <description>CEC: To capture the best visiting hour</description>
        <label>Best Visiting Hour</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Field1__c</fullName>
        <description>CEC: Used for retrieval report</description>
        <formula>&quot;&quot;</formula>
        <label>Blank Field1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Field2__c</fullName>
        <description>CEC: For Retrieval Report</description>
        <formula>&quot;&quot;</formula>
        <label>Blank Field2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Field3__c</fullName>
        <description>CEC: Used for retrieval report</description>
        <formula>&quot;&quot;</formula>
        <label>Blank Field3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Country_Name__c</fullName>
        <description>CEC: To capture the case country name</description>
        <label>Case Country Name</label>
        <picklist>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Market__c</fullName>
        <description>CEC Case Market will hold market information</description>
        <formula>Case__r.Country__r.Market__c</formula>
        <label>Case Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <description>CEC Product code to  display the case product information</description>
        <formula>Case__r.CEC_Product__r.Consumer_Product_Descriptor_Local_Lang__c</formula>
        <label>Case Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>CEC Case is a Master details field.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Retrieval Requests</relationshipLabel>
        <relationshipName>Retrieval_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <description>CEC: used for Retrieval report for SoCo and MA</description>
        <formula>Case__r.Country__r.Company_Address__c</formula>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>CEC: used for Retrieval report for SoCo and MA</description>
        <formula>&quot;Unilever&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <description>CEC: used for Retrieval report for SoCo and MA</description>
        <formula>Case__r.Country__r.Company_Phone__c</formula>
        <label>Company Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Home_Phone__c</fullName>
        <description>CEC Consumer Home Phone displays Account&apos;s Home Phone number.</description>
        <formula>Case__r.Account.PersonContact.HomePhone</formula>
        <label>Consumer Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Mobile__c</fullName>
        <description>CEC Consumer Mobile displays Account&apos;s Mobile number</description>
        <formula>Case__r.Account.PersonContact.MobilePhone</formula>
        <label>Consumer Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Name__c</fullName>
        <description>CEC: Used for retrieval report</description>
        <formula>Case__r.Account.PersonContact.FirstName + &quot; &quot; +  Case__r.Account.PersonContact.LastName</formula>
        <label>Consumer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Other_Phone__c</fullName>
        <description>CEC Consumer Other Phone displays Account&apos;s Other Phone number</description>
        <formula>Case__r.Account.PersonContact.OtherPhone</formula>
        <label>Consumer Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Phone__c</fullName>
        <description>CEC Consumer Phone displays Account&apos;s Phone number.</description>
        <formula>Case__r.Account.PersonContact.Phone</formula>
        <label>Consumer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Telephone_Number__c</fullName>
        <description>CEC: used for Soco/MA retrieval report</description>
        <formula>IF( Consumer_Phone__c != &apos;&apos;,Consumer_Phone__c, IF( Consumer_Mobile__c != &apos;&apos;,Consumer_Mobile__c ,IF( Consumer_Home_Phone__c != &apos;&apos;, Consumer_Home_Phone__c, Consumer_Other_Phone__c )))</formula>
        <label>Consumer Telephone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC Courier Email Sent is used to check whether the courier email has been sent or not.</description>
        <label>Courier Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <formula>&quot;Call id:&quot;+Case__r.CaseNumber +&quot; &quot;+Case__r.CEC_Product__r.Consumer_Product_Descriptor_Local_Lang__c + &quot;  No of Units:&quot; + TEXT (Retrieval_Quantity__c)+ &quot; &quot;  +Case__r.CEC_Reason_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Flag__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;1&quot;</formula>
        <label>Exchange Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Email__c</fullName>
        <description>CEC: This is used in thunderhead email</description>
        <formula>Product_Factory__r.Email__c</formula>
        <label>Factory Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Approved__c</fullName>
        <description>CEC Fulfilement Approval  will hold approval status of fulfilment.</description>
        <formula>Fulfilment_Id__r.isApproved__c</formula>
        <label>Fulfilment Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC Fulfilment Id  is a look up field for Fulfilment</description>
        <label>Fulfilment Id</label>
        <referenceTo>cec_Fulfilment__c</referenceTo>
        <relationshipLabel>Retrieval Requests</relationshipLabel>
        <relationshipName>Retrieval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Product_Cd__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;1&quot;</formula>
        <label>Global Product Cd</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Gift__c</fullName>
        <description>CEC - Gift details from Fulfilment</description>
        <formula>Fulfilment_Id__r.Include_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Code_1__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;N&quot;</formula>
        <label>Internal Code 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Code_2__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;N&quot;</formula>
        <label>Internal Code 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Code_3__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;DOM&quot;</formula>
        <label>Internal Code 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>CEC :Mailing Address from Account related to the Case</description>
        <formula>IF((ISBLANK(Case__r.Account.PersonContact.MailingStreet)), null, (Case__r.Account.PersonContact.MailingStreet &amp; &quot;, &quot;)) 
&amp; 
IF((ISBLANK(Case__r.Account.PersonContact.MailingCity)), null, (Case__r.Account.PersonContact.MailingCity &amp; &quot;, &quot;)) 
&amp; 
IF((ISBLANK(Case__r.Account.PersonContact.MailingState)), null, (Case__r.Account.PersonContact.MailingState &amp; &quot;, &quot;)) 
&amp; 
IF((ISBLANK(Case__r.Account.PersonContact.MailingPostalCode)), null, (Case__r.Account.PersonContact.MailingPostalCode &amp; &quot;, &quot;)) 
&amp; 
Case__r.Account.PersonContact.MailingCountry</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CU_Description_English__c</fullName>
        <description>CEC; Retrieval report</description>
        <formula>Case__r.CEC_Product__r.Product_CU_Description_English__c</formula>
        <label>Product CU Description (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CU_MRDR_Code__c</fullName>
        <description>CEC: For retrieval report</description>
        <formula>Case__r.CEC_Product__r.Product_CU_MRDR_Code__c</formula>
        <label>Product CU MRDR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Factory_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be set to TRUE once we send the email to the product factory</description>
        <label>Product Factory Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Factory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC Product Factory is a lookup to CEC Factory Details object.</description>
        <label>Product Factory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CEC_Factory_Details__c.Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>CEC_Factory_Details__c.Email__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>CEC_Factory_Details__c.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Case_Country_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CEC_Factory_Details__c</referenceTo>
        <relationshipLabel>Retrieval Requests (Product Factory)</relationshipLabel>
        <relationshipName>Retrieval_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Notes__c</fullName>
        <description>CEC - Product Notes from Fulfilment</description>
        <formula>Fulfilment_Id__r.Product_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Bulks__c</fullName>
        <description>CEC: used for SoCo/MA Retrieval report</description>
        <formula>&quot;1&quot;</formula>
        <label>Quantity of Bulks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Action__c</fullName>
        <description>CEC Retrieval Action  will hold action for Retrieval Request</description>
        <label>Retrieval Action</label>
        <picklist>
            <picklistValues>
                <fullName>Clothing Retrieval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver Gift with Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver New Product with Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product &amp; Clothing Retrieval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product &amp; Clothing Retrieval with Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product &amp; Foreign Matter Retrieval with Replacement(Factory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Retrieval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Retrieval(Factory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Retrieval with Replacement(Disposal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Retrieval with Replacement(Factory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Retrieval with Replacement(Factory Study)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retrieval_Message__c</fullName>
        <description>CEC Retrieval Message. To capture any error message from the downstream system</description>
        <label>Retrieval Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Notes__c</fullName>
        <description>CEC Observation to capture any details related to retrievals</description>
        <label>Retrieval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retrieval_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>CEC Retrieval Quantity will hold Quantity of Retrieval product</description>
        <label>Retrieval Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retrieval_Status__c</fullName>
        <description>CEC Retrieval Status  will hold status of Retrieval Request.</description>
        <label>Retrieval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing Delivery Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Errored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiate Clothing Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiate Product Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rebook Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieval Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>CEC Submitted Date is used to display when retrieval request has been submitted.</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Textile_Factory_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be set to TRUE once we send the email to the textile factory</description>
        <label>Textile Factory Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Textile_Factory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC  Textile Factory is a lookup to CEC Factory Details Object.</description>
        <label>Textile Factory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CEC_Factory_Details__c.Type__c</field>
                <operation>equals</operation>
                <value>Textile</value>
            </filterItems>
            <filterItems>
                <field>CEC_Factory_Details__c.Email__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>CEC_Factory_Details__c.Country_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Case_Country_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CEC_Factory_Details__c</referenceTo>
        <relationshipLabel>Retrieval Requests</relationshipLabel>
        <relationshipName>Retrieval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Case__r.Id ,5) &amp; SUBSTITUTE(Left(RIGHT(Case__r.Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Case__r.Id,5) &amp; &quot;:ref&quot;</formula>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Weight_KG__c</fullName>
        <description>CEC: used for Retrieval report for SoCo and MA</description>
        <formula>&quot;1&quot;</formula>
        <label>Total Weight KG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_KG__c</fullName>
        <description>CEC: used for Retrieval report for SoCo and MA</description>
        <formula>&quot;1&quot;</formula>
        <label>Weight KG</label>
        <type>Text</type>
    </fields>
    <label>Retrieval Request</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Retrieval Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retrieval Requests</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>This record type is used for creating readonly pagelayout</description>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>